--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,13 @@
   padding-top: 60px;
 }
 
+.s_App {
+  text-align: center;
+  width: 20%;
+  margin: auto;
+  padding-top: 60px;
+  color: white;  
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -72,10 +79,11 @@ input[type=text], input[type=password] {
   display: inline-block;
   border: none;
   background: #f1f1f1;
+  background-color: #f4fbff;
 }
 
 input[type=text]:focus, input[type=password]:focus {
-  background-color: #ddd;
+  background-color: #f4fbff;
   outline: none;
 }
 
@@ -158,7 +166,7 @@ a {
 }
 
 input[type=text] {
-  background-color: #1A2226;
+  background-color: #f4fbff;
   border: none;
   border-bottom: 2px solid #0DB8DE;
   border-top: 0px;
@@ -170,7 +178,7 @@ input[type=text] {
 }
 
 input[type=password] {
-  background-color: #1A2226;
+  background-color: #f4fbff;
   border: none;
   border-bottom: 2px solid #0DB8DE;
   border-top: 0px;
